@@ -7,27 +7,15 @@ namespace Gdl
 	{
 		DockItem item;
 
-		public event EventHandler DockButtonClicked;
-
 		public DockBarButton (DockItem item)
 		{
 			this.item = item;
 			this.Relief = ReliefStyle.None;
-			Image image = new Image (item.StockId, IconSize.SmallToolbar);
-			this.Add (image);
-			this.Clicked += OnClicked;
+			this.Add (new Image (item.StockId, IconSize.SmallToolbar));
 		}
 
 		public DockItem DockItem {
-			get {
-				return item;
-			}
-		}
-
-		private void OnClicked (object sender, EventArgs args)
-		{
-			if (DockButtonClicked != null)
-				DockButtonClicked (this, EventArgs.Empty);
+			get { return item; }
 		}
 	}
 }
